# snakemake-logger-plugin-prometheus

./: CHANGELOG.md  README.md  pyproject.toml
.github/: release-please.yml
src/snakemake_logger_plugin_prometheus/: __init__.py
tests/: conftest.py  test_integration.py  test_unit.py
