[project]
name = "snakemake-logger-plugin-prometheus"
version = "0.1.0"
description = "Snakemake logger plugin that exposes job info to prometheus."
readme = "README.md"
authors = [{ name = "Till Hartmann", email = "till.hartmann@bih-charite.de" }]
requires-python = "<4.0,>=3.11"
dependencies = [
    "snakemake-interface-logger-plugins>=2.0,<3",
    "prometheus-client>=0.23.1,<0.24"
]

[project.urls]
repository = "https://github.com/tedil/snakemake-logger-plugin-prometheus"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snakemake_logger_plugin_prometheus"]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
snakemake-logger-plugin-prometheus = { path = ".", editable = true }

[tool.pixi.environments]
dev = { features = ["dev"] }
publish = { features = ["publish"] }

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.3.5,<9"
ruff = ">=0.14.0,<0.15"
mypy = ">=1.15.0,<2"
pytest-cov = ">=6.0.0,<7"
snakemake = ">=9.13.1,<10"
requests = ">=2.31"

[tool.mypy]
ignore_missing_imports = false
disallow_untyped_defs = true
warn_no_return = true

[tool.ruff]
line-length = 120

[tool.pixi.feature.dev.tasks]
format = "ruff format src tests"
lint = "ruff check src"
type-check = "mypy src/"
qc = { depends-on = ["format", "lint", "type-check"] }

[tool.pixi.feature.dev.tasks.test]
cmd = [
    "pytest",
    "--cov=snakemake_logger_plugin_prometheus",
    "--cov-report=xml:coverage-report/coverage.xml",
    "--cov-report=term-missing",
]

[tool.pixi.feature.publish.dependencies]
uv = ">=0.9.0"

[tool.pixi.feature.publish.tasks]
build = { cmd = "uv build", description = "Build the package into the dist/ directory" }
publish = { cmd = "uv publish", depends-on = ["build"], description = "Publish the package to PyPI" }